// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Host Summary Component #getEuiDescriptionList All item in description list are loading 1`] = `
<div>
  <dl
    class="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed"
  >
    <dt
      class="euiDescriptionList__title"
    >
      Name
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      First Seen
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Last Seen
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Id
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      IP Address
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      MAC Addr
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Type
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Platform
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      OS Name
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Family
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Version
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Architecture
    </dt>
    <div>
      <div
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
  </dl>
</div>
`;

exports[`Host Summary Component #getEuiDescriptionList if IP is an empty list in description list 1`] = `
<div>
  <dl
    class="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed"
  >
    <dt
      class="euiDescriptionList__title"
    >
      Name
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              siem-kibana
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      First Seen
    </dt>
    <div>
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-describedby="firstLastSeenError-siem-kibana-first-seen"
          class="euiIcon euiIcon--medium"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Last Seen
    </dt>
    <div>
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-describedby="firstLastSeenError-siem-kibana-last-seen"
          class="euiIcon euiIcon--medium"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Id
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              aa7ca589f1b8220002f2fc61c64cfbf1
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      IP Address
    </dt>
    <div>
      --
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      MAC Addr
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              42:01:0a:8e:00:07
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Type
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              projects/189716325846/machineTypes/n1-standard-1
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Platform
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              debian
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      OS Name
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              Debian GNU/Linux
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Family
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              debian
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Version
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              9 (stretch)
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Architecture
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kEYyzF eIecMG"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              x86_64
            </div>
          </div>
        </div>
      </div>
    </div>
  </dl>
</div>
`;

exports[`Host Summary Component rendering it renders the default Host Summary 1`] = `
<Component>
  <pure(Component)
    data={
      Object {
        "_id": "yneHlmgBjVl2VqDlAjPR",
        "host": Object {
          "architecture": "x86_64",
          "id": "aa7ca589f1b8220002f2fc61c64cfbf1",
          "ip": Array [
            "10.142.0.7",
            "fe80::4001:aff:fe8e:7",
          ],
          "mac": Array [
            "42:01:0a:8e:00:07",
          ],
          "name": "siem-kibana",
          "os": Object {
            "family": "debian",
            "name": "Debian GNU/Linux",
            "platform": "debian",
            "version": "9 (stretch)",
          },
          "type": "projects/189716325846/machineTypes/n1-standard-1",
        },
      }
    }
    endDate={618472800000}
    loading={false}
    startDate={552204000000}
  />
</Component>
`;
